<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHotel">

    <LinearLayout
        android:id="@+id/first_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_name"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/hotel_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_phone"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/hotel_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_website"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/hotel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hotel_address"
            android:padding="20dp"/>

    <Button
        android:id="@+id/bt_save_new_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_save_new_hotel"
        android:padding="20dp"/>
    <Button
        android:id="@+id/bt_cancel_new_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancel_new_hotel"
        android:padding="20dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>